# XGBoost-FastForest

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: fastforest-ci.yml
benchmark/: benchmark-01-m2c.cpp  benchmark-01-tmva.cpp  benchmark-01-treelite.py  benchmark-01.cpp  benchmark-01.py  xgboost2tmva.py
include/: fastforest.h
src/: CMakeLists.txt  FastForest.cpp  common_details.cpp  common_details.h  fastforest.cpp  fastforest_functions.cpp  tmva.cpp
test/: CMakeLists.txt  X.csv  check_serialization.py  create_test_data.py  model.txt  preds.csv  test.cpp  test_cppyy.py
